[tool.poetry]
name = "how-diffusion-models-work"
version = "0.1.0"
description = ""
authors = ["Vasken Dermardiros <vdermardiros@gmail.com>"]
readme = "README.md"
packages = [{include = "how_diffusion_models_work"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
torch = ">=2.0.0, !=2.0.1"
torchvision = "^0.15"
tqdm = "^4.66.1"
packaging = "^23.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
